--- a/views/login/index.html
+++ b/views/login/index.html
@@ -12,8 +12,8 @@
         <div class="lg:flex w-1/2 hidden bg-gray-500 bg-no-repeat bg-cover relative items-center" style="background-image: url(https://wallpaperaccess.com/full/3184128.jpg);">
             <div class="absolute bg-black opacity-60 inset-0 z-0"></div>
             <div class="w-full px-24 z-10">
-                <h1 class="text-5xl font-bold text-left tracking-wide">Nada que poner aun :3</h1>
-                <p class="text-3xl my-4">Se libre!!!</p>
+                <h1 class="text-5xl font-bold text-left tracking-wide">Hospital General</h1>
+                <p class="text-3xl my-4 text-indigo-500">de los valles del tuy</p>
             </div>
             <div class="bottom-0 absolute p-4 text-center right-0 left-0 flex justify-center space-x-4">
                 <span>
@@ -38,8 +38,8 @@
             </div>
 
             <div class="w-full py-6 z-20">
-                <h1 class="my-6 text-5xl font-bold text-indigo-600 tracking-wide">
-                    CEMENT FACTORY
+                <h1 class="my-6 text-4xl font-bold text-indigo-600 tracking-wide">
+                    DEPARTAMENTO DE ENFERMERIA
                 </h1>
                 <div class="py-6 space-x-2">
                     <span class="w-10 h-10 items-center justify-center inline-flex rounded-full font-bold text-lg border-2 border-white">f</span>
