--- a/views/registro/index.html
+++ b/views/registro/index.html
@@ -33,8 +33,8 @@
             <div class="w-full py-6 z-20 ">
                 <!-- titulo -->
                 
-                <h1 class=" my-6 text-5xl font-bold text-indigo-600 tracking-wide">
-                    CEMENT FACTORY
+                <h1 class=" my-6 text-4xl font-bold text-indigo-600 tracking-wide">
+                    DEPARTAMENTO DE ENFERMERIA
                 </h1>
                 <p class="text-gray-100 font-bold">
                     registrate para continuar
